feat(sprint9): Phase 3 — icons, GitHub Actions CI/CD, auto-update, ZIP export/import, first-run wizard
- App icons: icon.png (1024x1024), icon.icns (macOS), icon.ico (Windows)
  generated by desktop/scripts/generate-icons.mjs (zero external deps)
- GitHub Actions: .github/workflows/release.yml — 3-platform matrix build
  (macos-latest .dmg, ubuntu-latest .AppImage, windows-latest .exe)
  auto-creates GitHub Release when pushing v*.*.* tag
- Auto-update: electron-updater 6.x in desktop/electron/main.ts
  checks 10s after launch, prompts before download + restart
- ZIP export/import: /api/desktop-export + /api/desktop-import
  adm-zip (pure JS), 12 tables, optional media inline embedding
- First-run wizard: /setup/page.tsx (welcome, choice, done)
- Admin UI: /admin/import-export/page.tsx with media options
- Sidebar: FileArchive nav item in adminNavItems (desktop-mode only)
- SPRINT-PLAN.md: Phase 1-3 complete, CTO conditions A/B/C resolved

Phase 3 complete. Phase 4 remaining: error handling, user guide, v2.0.0 tag.

--- a/desktop/electron-builder.yml
+++ b/desktop/electron-builder.yml
@@ -2,6 +2,12 @@ appId: com.ancestortree.desktop
 productName: Gia Phả Điện Tử
 copyright: Copyright © 2026 Minh-Tam-Solution
 
+# GitHub Releases for auto-update (electron-updater)
+publish:
+  provider: github
+  owner: Minh-Tam-Solution
+  repo: AncestorTree
+
 directories:
   output: release
   buildResources: build
