--- a/desktop/package.json
+++ b/desktop/package.json
@@ -10,11 +10,13 @@
     "build:next": "cd ../frontend && ELECTRON_BUILD=true pnpm build",
     "build:electron": "tsc",
     "build": "pnpm build:next && pnpm build:electron && electron-builder",
-    "build:mac": "pnpm build:next && pnpm build:electron && electron-builder --mac",
-    "build:win": "pnpm build:next && pnpm build:electron && electron-builder --win",
-    "build:linux": "pnpm build:next && pnpm build:electron && electron-builder --linux"
+    "icons": "node scripts/generate-icons.mjs",
+    "build:mac": "node scripts/generate-icons.mjs && pnpm build:next && pnpm build:electron && electron-builder --mac",
+    "build:win": "node scripts/generate-icons.mjs && pnpm build:next && pnpm build:electron && electron-builder --win",
+    "build:linux": "node scripts/generate-icons.mjs && pnpm build:next && pnpm build:electron && electron-builder --linux"
   },
   "dependencies": {
+    "electron-updater": "^6.3.9",
     "sql.js": "^1.11.0"
   },
   "devDependencies": {
