--- a/frontend/supabase/config.toml
+++ b/frontend/supabase/config.toml
@@ -21,8 +21,8 @@ port = 54323
 
 [auth]
 enabled = true
-site_url = "http://localhost:4000"
-additional_redirect_urls = ["http://localhost:4000"]
+site_url = "https://your-project.vercel.app"
+additional_redirect_urls = ["https://*.vercel.app", "http://localhost:4000"]
 
 [auth.email]
 enable_signup = true
